--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         Več o nas
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                        <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">Portfolio</a>
+                        <a class="dropdown-item" href="#">Potovanje</a>
+                        <a class="dropdown-item" href="#">Morje</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Contact</a>
                     </div>
@@ -41,6 +41,10 @@
             </ul>
         </div>
     </nav>
+
+    <div>
+        <img src="/Slike/469401129_10235579482813229_3969995487875287357_n.jpg" />
+    </div>
 
 <script src="bootstrap.min.js"></script>
 <script src="java.js"></script>
