--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Jan<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Domov<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="#">Jan</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Lucija</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Zoe</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,9 +48,10 @@
         </div>
     </nav>
 
-    <div>
-        <img src="/Slike/469401129_10235579482813229_3969995487875287357_n.jpg" />
+    <div class="slika">
+        <img src="Slike/skupinska.jpg"/>
     </div>
+
 
 <script src="bootstrap.min.js"></script>
 <script src="java.js"></script>
